Fix content alignment center for buttons to close #211

--- a/src/components/collection/scss/_style.scss
+++ b/src/components/collection/scss/_style.scss
@@ -18,3 +18,10 @@
 		flex-direction: row-reverse;
 	}
 }
+
+.novablocks-collection--align-center {
+
+	.wp-block-buttons {
+		justify-content: center;
+	}
+}
